--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Emulate the Mongo 2.x nodejs driver on top of the Mongo 3.x nodejs driver, for bc",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "npx eslint . && mocha"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,13 @@
     "mongodb": "^3.3.5"
   },
   "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-apostrophe": "^2.0.2",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "mocha": "^6.2.2"
   }
 }
