--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,23 @@
 {
-  "extends": "apostrophe"
+  "extends": [
+    "apostrophe"
+  ],
+  "globals": {
+    "apos": true
+  },
+  "overrides": [
+    {
+      "files": [
+        "test/**/*.js"
+      ],
+      "rules": {
+        "max-len": [
+          "error",
+          {
+            "code": 120
+          }
+        ]
+      }
+    }
+  ]
 }
