--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/apostrophecms/emulate-mongo-3-driver#readme",
   "dependencies": {
-    "mongodb": "6.7.0",
+    "mongodb": "^6.8.0",
     "mongodb-legacy": "^6.0.1"
   },
   "devDependencies": {
